--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,32 +1,40 @@
-name: CI & Deploy to o2switch (via API)
+name: CI & Deploy to o2switch via API
 
 on:
   push:
     branches: ["main"]
 
 jobs:
-  test-and-deploy-API:
+  Test-and-Deploy-API:
     runs-on: ubuntu-latest
 
     env:
-      CPANEL_SERVER: ${{ secrets.CPANEL_SERVER }}
-      CPANEL_LOGIN:  ${{ secrets.CPANEL_LOGIN }}
-      CPANEL_TOKEN:  ${{ secrets.CPANEL_TOKEN }}
-      O2SWITCH_REMOTE: ${{ secrets.O2SWITCH_REMOTE }}
+      CPANEL_SERVER: ${{ secrets.CPANEL_SERVER }}      # ex: truie.o2switch.net
+      CPANEL_LOGIN:  ${{ secrets.CPANEL_LOGIN }}       # ex: keze7545
+      CPANEL_TOKEN:  ${{ secrets.CPANEL_TOKEN }}       # token API cPanel
+      O2SWITCH_REMOTE: ${{ secrets.O2SWITCH_REMOTE }}  # ssh://keze7545@truie.o2switch.net/home/keze7545/repositories/tp-site
 
     steps:
-      # 1) Checkout du code
+      # 1) Checkout complet (pas shallow)
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # 2) Vérifications de base (structure du site)
+      # (sécurité au cas où)
+      - name: Ensure repository is not shallow
+        run: |
+          if git rev-parse --is-shallow-repository | grep -q true; then
+            git fetch --unshallow
+          fi
+
+      # 2) Tests rapides
       - name: Basic checks
         run: |
           set -e
-          test -f index.html || (echo "❌ index.html manquant à la racine" >&2; exit 1)
+          test -f index.html || (echo "❌ index.html manquant" >&2; exit 1)
           if find . -type f -size +5M -not -path "./.git/*" | grep -q .; then
-            echo "❌ Des fichiers > 5 Mo détectés." >&2
-            exit 1
+            echo "❌ Fichiers > 5 Mo détectés." >&2; exit 1
           fi
           echo "✅ Checks OK"
 
@@ -37,7 +45,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y tidy
           tidy -qe -utf8 index.html || echo "⚠️ Tidy a signalé des problèmes (non bloquant)"
 
-      # 4) Whitelist de l'IP du runner via l’API o2switch
+      # 4) Whitelist IP du runner via l’API o2switch
       - name: Whitelist runner IP on o2switch firewall (SSH/22)
         id: fw_add
         run: |
@@ -51,13 +59,13 @@ jobs:
           echo "$RESP" | jq .
           test "$(echo "$RESP" | jq -r '.status')" = "1"
 
-      # 5) Configuration SSH agent (clé privée GitHub → o2switch)
+      # 5) Agent SSH (clé privée sans passphrase)
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.O2SWITCH_SSH_KEY }}
 
-      # 6) Ajout du host dans known_hosts (robuste)
+      # 6) known_hosts résilient
       - name: Add o2switch host to known_hosts (resilient)
         continue-on-error: true
         shell: bash
@@ -75,7 +83,15 @@ jobs:
           } >> ~/.ssh/config
           chmod 600 ~/.ssh/config || true
 
-      # 7) Push du code vers o2switch
+      # 7) (debug facultatif)
+      - name: Debug SSH & remote (non-blocking)
+        continue-on-error: true
+        run: |
+          set -e
+          echo "REMOTE=${O2SWITCH_REMOTE}"
+          GIT_SSH_COMMAND="ssh -o BatchMode=yes -o StrictHostKeyChecking=yes -vvv" git ls-remote "${O2SWITCH_REMOTE}"
+
+      # 8) Push vers le dépôt Git™ o2switch (déclenche .cpanel.yml côté serveur)
       - name: Push to o2switch repo
         run: |
           set -e
@@ -84,7 +100,7 @@ jobs:
           git remote | grep -q '^o2switch$' || git remote add o2switch "${O2SWITCH_REMOTE}"
           GIT_SSH_COMMAND="ssh -o BatchMode=yes" git push -f o2switch HEAD:refs/heads/main
 
-      # 8) Nettoyage (retrait IP du pare-feu)
+      # 9) Nettoyage whitelist (toujours exécuté)
       - name: Remove runner IP from whitelist
         if: always()
         run: |
