--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,17 +1,14 @@
----
 deployment:
   tasks:
-    # 1) Chemin du dossier public_html/tp sur ton hébergement
+    # Le dossier source : ton dépôt "non nu" (là où tu vois index.html)
+    - export SOURCEDIR=/home/keze7545/repositories/tp-site
+    # La cible publique de ton sous-domaine
     - export DEPLOYPATH=/home/keze7545/public_html/tp
 
-    # 2) Synchronise les fichiers du repo vers le dossier de ton site
+    # Copie "repo -> public" (nettoyage des anciens fichiers)
     - /bin/rsync -az --delete \
         --exclude ".git*" \
         --exclude ".github" \
         --exclude ".cpanel.yml" \
         --exclude "README.md" \
-        ./  "$DEPLOYPATH"
-
-
-
-
+        "$SOURCEDIR"/ "$DEPLOYPATH"
