--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,14 +1,9 @@
 deployment:
   tasks:
-    # Le dossier source : ton dépôt "non nu" (là où tu vois index.html)
-    - export SOURCEDIR=/home/keze7545/repositories/tp-site
-    # La cible publique de ton sous-domaine
     - export DEPLOYPATH=/home/keze7545/public_html/tp
-
-    # Copie "repo -> public" (nettoyage des anciens fichiers)
     - /bin/rsync -az --delete \
         --exclude ".git*" \
         --exclude ".github" \
         --exclude ".cpanel.yml" \
         --exclude "README.md" \
-        "$SOURCEDIR"/ "$DEPLOYPATH"
+        ./ "$DEPLOYPATH"
