--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,9 +1,13 @@
 deployment:
   tasks:
+    - set -e
+    - echo "PWD=$(pwd)"; echo "Listing source:"; /bin/ls -la .
     - export DEPLOYPATH=/home/keze7545/public_html/tp
-    - /bin/rsync -az --delete \
+    - echo "Deploy to $DEPLOYPATH"
+    - /bin/rsync -avz --delete \
         --exclude ".git*" \
         --exclude ".github" \
         --exclude ".cpanel.yml" \
         --exclude "README.md" \
         ./ "$DEPLOYPATH"
+    - echo "Listing target:"; /bin/ls -la "$DEPLOYPATH"
