--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,13 +1,23 @@
 deployment:
   tasks:
     - set -e
-    - echo "PWD=$(pwd)"; echo "Listing source:"; /bin/ls -la .
+    - echo "== BEGIN $(date)" >> /home/keze7545/deploy.log
+    - echo "PWD: $(pwd)"       >> /home/keze7545/deploy.log
+    - echo "-- Source listing --" >> /home/keze7545/deploy.log
+    - /bin/ls -la .            >> /home/keze7545/deploy.log
+
+    # Chemin cible du sous-domaine (ajuste si nécessaire)
     - export DEPLOYPATH=/home/keze7545/public_html/tp
-    - echo "Deploy to $DEPLOYPATH"
-    - /bin/rsync -avz --delete \
+    - /bin/mkdir -p "$DEPLOYPATH"
+
+    - echo "Deploy to: $DEPLOYPATH" >> /home/keze7545/deploy.log
+    - /bin/rsync -av --delete \
         --exclude ".git*" \
         --exclude ".github" \
         --exclude ".cpanel.yml" \
         --exclude "README.md" \
-        ./ "$DEPLOYPATH"
-    - echo "Listing target:"; /bin/ls -la "$DEPLOYPATH"
+        ./ "$DEPLOYPATH"       >> /home/keze7545/deploy.log 2>&1
+
+    - echo "-- Target listing --" >> /home/keze7545/deploy.log
+    - /bin/ls -la "$DEPLOYPATH"  >> /home/keze7545/deploy.log
+    - echo "== END $(date)"      >> /home/keze7545/deploy.log
