--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,22 +1,9 @@
 ---
 deployment:
   tasks:
-    - /usr/bin/echo "== BEGIN DEPLOY =="
-    - /usr/bin/echo "Working dir: $(pwd)"
-    - /usr/bin/ls -la .
-
-    # Dossier cible de ton sous-domaine
-    - export DEPLOYPATH=/home/keze7545/public_html/tp
-    - /usr/bin/mkdir -p "$DEPLOYPATH"
-
-    # Synchronisation des fichiers
-    - /usr/bin/rsync -av --delete \
-        --exclude ".git*" \
-        --exclude ".github" \
-        --exclude ".cpanel.yml" \
-        --exclude "README.md" \
-        ./ "$DEPLOYPATH"/
-
-    - /usr/bin/echo "== FILES IN TARGET =="
-    - /usr/bin/ls -la "$DEPLOYPATH"
-    - /usr/bin/echo "== END DEPLOY =="
+    - /bin/echo "=== BEGIN DEPLOY ==="
+    - /bin/echo "Source directory:"; /bin/pwd; /bin/ls -la .
+    - /bin/echo "Deploying to /home/keze7545/public_html/tp"
+    - /usr/bin/rsync -av --delete --exclude=".git*" --exclude=".github" --exclude=".cpanel.yml" --exclude="README.md" ./ /home/keze7545/public_html/tp/
+    - /bin/echo "Target content:"; /bin/ls -la /home/keze7545/public_html/tp
+    - /bin/echo "=== DEPLOY COMPLETE ==="
