--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,5 +5,9 @@ deployment:
     - /bin/echo "Source directory:"; /bin/pwd; /bin/ls -la .
     - /bin/echo "Deploying to /home/keze7545/public_html/tp"
     - /usr/bin/rsync -av --delete --exclude=".git*" --exclude=".github" --exclude=".cpanel.yml" --exclude="README.md" ./ /home/keze7545/public_html/tp/
+    - /bin/find /home/keze7545/public_html/tp -type d -exec chmod 755 {} \;
+    - /bin/find /home/keze7545/public_html/tp -type f -exec chmod 644 {} \;
+    - /bin/chmod 644 /home/keze7545/public_html/tp/.htaccess
     - /bin/echo "Target content:"; /bin/ls -la /home/keze7545/public_html/tp
     - /bin/echo "=== DEPLOY COMPLETE ==="
+
